crates/strider-analyze/tests/snapshots/v3__ppc32be__floats__f32_compare.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v7" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v7" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "9" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v7" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "9" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "14" -> "10" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "15" -> "10" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "15" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="φ r9", shape=house, fillcolor="#163030"];
  "9" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "16" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "19" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v20" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v20" -> "11" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="bitcast\nf32 → u32", shape=box, fillcolor="#302018"];
  "22" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="FloatToFloat\nf64 → f32", shape=box, fillcolor="#302018"];
  "23" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "15" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "25" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="bitcast\nf32 → u32", shape=box, fillcolor="#302018"];
  "28" -> "27" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="FloatToFloat\nf64 → f32", shape=box, fillcolor="#302018"];
  "29" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "14" -> "29" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "30" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v31" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v31" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "32" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "30" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "33" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v34" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v34" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "35" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "35" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "36" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "36" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "38" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "40" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "44" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "45" -> "44" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "45" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "46" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "22" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "47" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "47" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "48" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "49" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "28" -> "49" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "50" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "52" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "52" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "54" -> "52" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "54" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "49" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "55" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "57" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "58" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "57" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "59" -> "57" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "59" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "46" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "60" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "62" -> "60" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "62" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "49" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "63" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "63" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "64" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "64" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "66" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "66" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "68" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "70" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "72" -> "71" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "72" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "73" -> "72" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "73" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "74" -> "73" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "73" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "22" -> "74" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "70" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "75" -> "70" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "75" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "76" -> "75" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "76" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "77" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "28" -> "77" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "68" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "78" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "80" -> "79" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "81" -> "79" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "80" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "82" -> "80" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "82" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "77" -> "82" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "82" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "83" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "84" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "84" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "85" -> "84" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "86" -> "84" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "86" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "85" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "87" -> "85" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "87" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "74" -> "87" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "87" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "83" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "88" -> "83" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "89" -> "83" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "89" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "88" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "90" -> "88" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "90" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "77" -> "90" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "90" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
